Dibuat menggunakan Colab

--- a/Tugas_JS2.ipynb
+++ b/Tugas_JS2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM3Zf15doHTqE84U1LXY70K",
+      "authorship_tag": "ABX9TyNyl1KGi+rHzxvWisXXMn1E",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -279,13 +279,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 13,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "zaJPXdW1fCNM",
-        "outputId": "854355c5-6dcb-4987-e47a-3b26d9eb74eb"
+        "outputId": "ac719dd7-e5a4-41a7-9a10-2a3ba2aa8cf0"
       },
       "outputs": [
         {
@@ -456,8 +456,13 @@
         "# Split lagi antara validasi dan testing\n",
         "df_val, df_test = train_test_split(df_unseen, test_size=0.5, random_state=0, stratify=df_unseen['diagnosis'])\n",
         "\n",
-        "# Cek masing-masing ukuran data\n",
-        "\n",
+        "# Cek jumlah data asli, data latih, validasi, dan uji\n",
+        "print(f'Jumlah data asli: {len(df)}')\n",
+        "print(f'Jumlah data train: {len(df_train)}')\n",
+        "print(f'Jumlah data val: {len(df_val)}')\n",
+        "print(f'Jumlah data test: {len(df_test)}')\n",
+        "print(f'-----------------------------------')\n",
+        "# Cek distribusi label pada setiap subset\n",
         "print(f'Jumlah label data asli:\\n{df.diagnosis.value_counts()}')\n",
         "print(f'Jumlah label data train:\\n{df_train.diagnosis.value_counts()}')\n",
         "print(f'Jumlah label data val:\\n{df_val.diagnosis.value_counts()}')\n",
@@ -468,14 +473,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Vdyedxs2gKJe",
-        "outputId": "4d434dbe-d6ea-4205-ee46-cc1b8bb00a6f"
+        "outputId": "4771d261-2589-4573-96c5-3f3cfe1f00c9"
       },
-      "execution_count": 6,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "Jumlah data asli: 569\n",
+            "Jumlah data train: 455\n",
+            "Jumlah data val: 57\n",
+            "Jumlah data test: 57\n",
+            "-----------------------------------\n",
             "Jumlah label data asli:\n",
             "diagnosis\n",
             "0    357\n",
