Dibuat menggunakan Colab

--- a/Tugas2_JS4.ipynb
+++ b/Tugas2_JS4.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPh5P2hr98YlzQ4DQzUeamt",
+      "authorship_tag": "ABX9TyPfBaNbjRpW06AJ8UwGKbBI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,7 +44,7 @@
           "height": 262
         },
         "id": "dQRiIZ_67TuL",
-        "outputId": "ef8ab7d4-c3e8-46c0-d6b0-859d2f4fbc3b"
+        "outputId": "29731203-65ae-4f35-c5f3-493b8f87accd"
       },
       "outputs": [
         {
@@ -55,9 +55,9 @@
             ],
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-fae6caa3-39ca-4bb2-996f-12d58cd45da8\" name=\"files[]\" multiple disabled\n",
+              "     <input type=\"file\" id=\"files-28da2570-6d98-44d3-a9bc-3e3a763a975b\" name=\"files[]\" multiple disabled\n",
               "        style=\"border:none\" />\n",
-              "     <output id=\"result-fae6caa3-39ca-4bb2-996f-12d58cd45da8\">\n",
+              "     <output id=\"result-28da2570-6d98-44d3-a9bc-3e3a763a975b\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -262,60 +262,35 @@
       ],
       "source": [
         "# Import Required Libraries\n",
-        "from pathlib import Path\n",
-        "import matplotlib.image as mpimg\n",
-        "import matplotlib.pyplot as plt\n",
-        "import cv2\n",
-        "import random\n",
         "import numpy as np\n",
         "import pandas as pd\n",
+        "import matplotlib.image as mpimg\n",
         "from google.colab import files\n",
         "import zipfile\n",
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.svm import SVC\n",
         "from sklearn.metrics import classification_report, accuracy_score\n",
+        "import cv2\n",
+        "from pathlib import Path\n",
         "\n",
-        "# Mengunggah file zip dari lokal\n",
+        "# Mengunggah file zip dari lokal dan mengekstrak\n",
         "uploaded = files.upload()\n",
-        "\n",
-        "# Mengekstrak file ZIP\n",
         "for file_name in uploaded.keys():\n",
         "    with zipfile.ZipFile(file_name, 'r') as zip_ref:\n",
-        "        zip_ref.extractall('/content/')  # Tentukan lokasi ekstraksi\n",
+        "        zip_ref.extractall('/content/')\n",
         "\n",
-        "# Image directories\n",
-        "train_dir = \"images/training/\"\n",
-        "test_dir = \"images/test/\"\n",
+        "# Mendefinisikan direktori gambar\n",
+        "train_dir = Path(\"images/training/\")\n",
         "\n",
-        "def load_dataset(img_dir):\n",
-        "    p = Path(img_dir)\n",
-        "    dirs = p.glob('*')\n",
-        "\n",
-        "    img_list = []\n",
-        "\n",
-        "    for dir in dirs:\n",
-        "        label = str(dir).split('/')[-1]\n",
-        "        for file in dir.glob('*.jpg'):\n",
-        "            img = mpimg.imread(file)\n",
-        "\n",
-        "            if img is not None:\n",
-        "                img_list.append((img, label))\n",
-        "\n",
-        "    return img_list\n",
-        "\n",
-        "# Load dataset\n",
-        "train_data = load_dataset(train_dir)\n",
-        "\n",
-        "# Ekstrak fitur histogram dan label\n",
-        "X = []\n",
-        "y = []\n",
-        "\n",
-        "for img, label in train_data:\n",
-        "    # Hitung histogram warna (gunakan skala warna RGB)\n",
+        "# Memuat dataset dan menghitung histogram\n",
+        "X, y = [], []\n",
+        "for img_path in train_dir.glob('*/*.jpg'):\n",
+        "    img = mpimg.imread(img_path)\n",
         "    hist = cv2.calcHist([img], [0, 1, 2], None, [8, 8, 8], [0, 256, 0, 256, 0, 256]).flatten()\n",
         "    X.append(hist)\n",
-        "    y.append(label)\n",
+        "    y.append(img_path.parent.name)  # Mengambil nama folder sebagai label\n",
         "\n",
+        "# Mengonversi ke array numpy\n",
         "X = np.array(X)\n",
         "y = np.array(y)\n",
         "\n",
