Dibuat menggunakan Colab

--- a/Tugas_JS2.ipynb
+++ b/Tugas_JS2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNyl1KGi+rHzxvWisXXMn1E",
+      "authorship_tag": "ABX9TyOzPujkBMzqGorHHJGNxcQY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -61,9 +61,9 @@
           "height": 71
         },
         "id": "r1eg1CNXgni9",
-        "outputId": "e9f38e5b-e44b-4778-8c66-e489cb45d2ac"
+        "outputId": "52da56de-2edf-43bb-bdeb-c6e7b4c184d3"
       },
-      "execution_count": 1,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "display_data",
@@ -73,9 +73,9 @@
             ],
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-c1483a82-c134-4c7d-a75b-87819e54825a\" name=\"files[]\" multiple disabled\n",
+              "     <input type=\"file\" id=\"files-190efd78-32a8-46df-8a37-daa8bcfdb869\" name=\"files[]\" multiple disabled\n",
               "        style=\"border:none\" />\n",
-              "     <output id=\"result-c1483a82-c134-4c7d-a75b-87819e54825a\">\n",
+              "     <output id=\"result-190efd78-32a8-46df-8a37-daa8bcfdb869\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -279,13 +279,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "zaJPXdW1fCNM",
-        "outputId": "ac719dd7-e5a4-41a7-9a10-2a3ba2aa8cf0"
+        "outputId": "ba2e51bd-d4b8-4906-bf40-c0100a6d5c7f"
       },
       "outputs": [
         {
@@ -338,9 +338,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cn-tPOUmgFXF",
-        "outputId": "7706e7a1-f3a5-4d98-bb47-094dd62dbc50"
+        "outputId": "38dc3653-5802-4a82-b9eb-27e74f69f43e"
       },
-      "execution_count": 3,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -352,6 +352,31 @@
             "3    1\n",
             "4    1\n",
             "Name: diagnosis, dtype: int64\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Mengidentifikasi kolom non-numerik\n",
+        "non_numeric_cols = df.select_dtypes(include=['object']).columns\n",
+        "print(\"Kolom non-numerik:\", non_numeric_cols.tolist())"
+      ],
+      "metadata": {
+        "id": "5T8sIfp9HI5r",
+        "outputId": "f7a7cd4f-d2b8-453b-a9ea-6e8db080c085",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Kolom non-numerik: []\n"
           ]
         }
       ]
@@ -385,9 +410,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZSbDxY1jgHry",
-        "outputId": "739493d0-17ea-48dc-fd58-2545a5f6735f"
+        "outputId": "f524f64b-7cf9-4063-b480-75888b3d49a7"
       },
-      "execution_count": 7,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -399,6 +424,83 @@
             "2  0.431741          1     1.579888      0.456187        1.566503   1.558884   \n",
             "3  0.432121          1    -0.768909      0.253732       -0.592687  -0.764464   \n",
             "4  0.432201          1     1.750297     -1.151816        1.776573   1.826229   \n",
+            "\n",
+            "   smoothness_mean  compactness_mean  concavity_mean  concave points_mean  \\\n",
+            "0         1.568466          3.283515        2.652874             2.532475   \n",
+            "1        -0.826962         -0.487072       -0.023846             0.548144   \n",
+            "2         0.942210          1.052926        1.363478             2.037231   \n",
+            "3         3.283553          3.402909        1.915897             1.451707   \n",
+            "4         0.280372          0.539340        1.371011             1.428493   \n",
+            "\n",
+            "   ...  radius_worst  texture_worst  perimeter_worst  area_worst  \\\n",
+            "0  ...      1.886690      -1.359293         2.303601    2.001237   \n",
+            "1  ...      1.805927      -0.369203         1.535126    1.890489   \n",
+            "2  ...      1.511870      -0.023974         1.347475    1.456285   \n",
+            "3  ...     -0.281464       0.133984        -0.249939   -0.550021   \n",
+            "4  ...      1.298575      -1.466770         1.338539    1.220724   \n",
+            "\n",
+            "   smoothness_worst  compactness_worst  concavity_worst  concave points_worst  \\\n",
+            "0          1.307686           2.616665         2.109526              2.296076   \n",
+            "1         -0.375612          -0.430444        -0.146749              1.087084   \n",
+            "2          0.527407           1.082932         0.854974              1.955000   \n",
+            "3          3.394275           3.893397         1.989588              2.175786   \n",
+            "4          0.220556          -0.313395         0.613179              0.729259   \n",
+            "\n",
+            "   symmetry_worst  fractal_dimension_worst  \n",
+            "0        2.750622                 1.937015  \n",
+            "1       -0.243890                 0.281190  \n",
+            "2        1.152255                 0.201391  \n",
+            "3        6.046041                 4.935010  \n",
+            "4       -0.868353                -0.397100  \n",
+            "\n",
+            "[5 rows x 32 columns]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "*Pembenaran kode program kolom diagnosis diikutkan dalam proses standardScaler*"
+      ],
+      "metadata": {
+        "id": "xJdPLDtFA-bo"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Identifikasi semua kolom numerik termasuk 'diagnosis'\n",
+        "num_cols = df.select_dtypes(include=['float64', 'int64']).columns\n",
+        "\n",
+        "# Inisialisasi scaler\n",
+        "scaler = StandardScaler()\n",
+        "\n",
+        "# Standarisasi semua kolom numerik termasuk 'diagnosis'\n",
+        "df[num_cols] = scaler.fit_transform(df[num_cols])\n",
+        "\n",
+        "# Menampilkan hasil standarisasi\n",
+        "print(df.head())"
+      ],
+      "metadata": {
+        "id": "wunpqPFcA9zr",
+        "outputId": "c86bfac0-a489-40cf-d692-7d70310aed39",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "         id  diagnosis  radius_mean  texture_mean  perimeter_mean  area_mean  \\\n",
+            "0 -0.236405   1.297676     1.097064     -2.073335        1.269934   0.984375   \n",
+            "1 -0.236403   1.297676     1.829821     -0.353632        1.685955   1.908708   \n",
+            "2  0.431741   1.297676     1.579888      0.456187        1.566503   1.558884   \n",
+            "3  0.432121   1.297676    -0.768909      0.253732       -0.592687  -0.764464   \n",
+            "4  0.432201   1.297676     1.750297     -1.151816        1.776573   1.826229   \n",
             "\n",
             "   smoothness_mean  compactness_mean  concavity_mean  concave points_mean  \\\n",
             "0         1.568466          3.283515        2.652874             2.532475   \n",
@@ -473,9 +575,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Vdyedxs2gKJe",
-        "outputId": "4771d261-2589-4573-96c5-3f3cfe1f00c9"
+        "outputId": "dfbc00fe-3ded-47b7-8a73-f6ee88f41917"
       },
-      "execution_count": 10,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -488,23 +590,23 @@
             "-----------------------------------\n",
             "Jumlah label data asli:\n",
             "diagnosis\n",
-            "0    357\n",
-            "1    212\n",
+            "-0.770609    357\n",
+            " 1.297676    212\n",
             "Name: count, dtype: int64\n",
             "Jumlah label data train:\n",
             "diagnosis\n",
-            "0    285\n",
-            "1    170\n",
+            "-0.770609    285\n",
+            " 1.297676    170\n",
             "Name: count, dtype: int64\n",
             "Jumlah label data val:\n",
             "diagnosis\n",
-            "0    36\n",
-            "1    21\n",
+            "-0.770609    36\n",
+            " 1.297676    21\n",
             "Name: count, dtype: int64\n",
             "Jumlah label data test:\n",
             "diagnosis\n",
-            "0    36\n",
-            "1    21\n",
+            "-0.770609    36\n",
+            " 1.297676    21\n",
             "Name: count, dtype: int64\n"
           ]
         }
